<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.scorekeeper.ScoreScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/team_1"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/goals"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team1_score"
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="0"
                    android:textSize="@dimen/score" />

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/fouls"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team1_fouls"
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="0"
                    android:textSize="@dimen/score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/team1_goal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_weight="1"
                        android:onClick="goal"
                        android:text="@string/goal" />

                    <Button
                        android:id="@+id/team1_void_goal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_weight="1"
                        android:onClick="voidGoal"
                        android:text="@string/void_goal" />

                </LinearLayout>

                <Button
                    android:id="@+id/team1_foul"
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_6dp"
                    android:onClick="foul"
                    android:text="@string/foul" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/team_2"
                    android:textColor="@color/Blue"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/goals"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team2_score"
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="0"
                    android:textSize="@dimen/score" />

                <TextView
                    style="@style/ViewTheme"
                    android:text="@string/fouls"
                    android:textSize="@dimen/Team"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team2_fouls"
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="0"
                    android:textSize="@dimen/score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_weight="1"
                        android:onClick="goal"
                        android:text="@string/goal" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_weight="1"
                        android:onClick="voidGoal"
                        android:text="@string/void_goal" />
                </LinearLayout>


                <Button
                    style="@style/ViewTheme"
                    android:layout_marginTop="@dimen/margin_6dp"
                    android:onClick="foul"
                    android:text="@string/foul" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_8dp"
                android:onClick="reset"
                android:text="@string/reset" />

            <CheckBox
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:checked="true"
                android:onClick="soundStatus"
                android:text="@string/sound_on" />

            <CheckBox
                android:id="@+id/images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_8dp"
                android:checked="true"
                android:onClick="imageStatus"
                android:text="@string/images_on" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>